package com.example.acrv.modelpackage.model

data class Clouds(
    val all: Int
)