package com.example.acrv.modelpackage.model

data class Coord(
    val lat: Int,
    val lon: Int
)