package com.example.acrv.modelpackage.model

data class Wind(
    val deg: Int,
    val speed: Double
)