package com.example.acrv.util

class Constants {

    companion object {
        const val BASE_URL = "https://api.openweathermap.org/"
    }
}